crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__preview_feed_tab.snap
---
source: crates/ripe-tui/src/ui/mod.rs
expression: "render_to_string(&mut app, 160, 40)"
---
 PIPES   EDIT  RUN  VIEW  HELP                                                   news_pipeline.pipe                                                   ● 8 nodes
┌Palette─────────────┐┌Canvas────────────────────────────────────────────────────────────────────────────────────┐┏Preview: Temp RSS━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│NODES               ││╔═════════════════════════════════════════╗   ╭─────────────────────────────────────────╮ │┃ FEED    ITEMS (3)    RAW                   ┃
│  filter           t││║1  Fetch Feed                            ║   │2  Fetch Feed                            │ │┃                                            ┃
│  limit            l││║https://hnrss.org/frontpage              ║   │https://www.reddit.com/r/rust/.rss       │ │┃ Title       Temp RSS                       ┃
│  regex            r││╚═════════════════════════════════════════╝   ╰─────────────────────────────────────────╯ │┃ Link        —                              ┃
│  reverse          e││                     ▼                                             │                      │┃ Description Generated by ripe              ┃
│  sort             s││╭─────────────────────────────────────────╮                        │                      │┃ Format      rss                            ┃
│  tail             i│││3  Filter                                │                        │                      │┃ Items       3                              ┃
│  transform        m│││item.pubDate > now - 2d                  │                        │                      │┃                                            ┃
│  union            u││╰─────────────────────────────────────────╯                        │                      │┃ Last eval 12:00                            ┃
│  unique           q││                     ▼                                             │                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│SOURCES             │││4  Regex                                 │                        │                      │┃                                            ┃
│  fetch_csv        v│││^\[(?<score>\d+)\]\s(?<title>.*)         │                        │                      │┃                                            ┃
│  fetch_feed       f││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│  fetch_json       j││                     ▼                                             │                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│SINKS               │││5  Filter                                │                        │                      │┃                                            ┃
│  output           o│││score > 100                              │                        │                      │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│                    ││                     ├─────────────────────────────────────────────┘                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││6  Union                                 │                                               │┃                                            ┃
│                    │││merge streams                            │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││7  Sort                                  │                                               │┃                                            ┃
│                    │││By: pubDate desc                         │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││8  Output                                │                                               │┃                                            ┃
│                    │││rss → temp://output.xml                  │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                                                                                          │┃                                            ┃
│                    ││                                                                                          │┃ Rendered 3 items · 12:00  Auto refresh: on ┃
└────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 Mode: Normal                                                                                 [ ] tab   a auto-refresh   j/k scroll   r run   tab pane   ? help
