crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__preview_raw_tab.snap
---
source: crates/ripe-tui/src/ui/mod.rs
assertion_line: 534
expression: "render_to_string(&mut app, 160, 40)"
---
 PIPES   EDIT  RUN  VIEW  HELP                                                   news_pipeline.pipe                                                   ● 8 nodes
┌Palette─────────────┐┌Canvas────────────────────────────────────────────────────────────────────────────────────┐┏Preview: Temp RSS━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│NODES               ││╔═════════════════════════════════════════╗   ╭─────────────────────────────────────────╮ │┃ FEED    ITEMS (3)    RAW                   ┃
│  filter           t││║1  Fetch Feed                            ║   │5  Fetch Feed                            │ │┃<?xml version="1.0" encoding="utf-8"?>      ┃
│  limit            l││║https://hnrss.org/frontpage              ║   │https://www.reddit.com/r/rust/.rss       │ │┃<rss version="2.0">                         ┃
│  regex            r││╚═════════════════════════════════════════╝   ╰─────────────────────────────────────────╯ │┃  <channel>                                 ┃
│  reverse          e││                     ▼                                             │                      │┃    <title>Temp RSS</title>                 ┃
│  sort             s││╭─────────────────────────────────────────╮                        │                      │┃    <link></link>                           ┃
│  tail             i│││2  Filter                                │                        │                      │┃    <description>Generated by ripe</descript┃
│  transform        m│││item.pubDate > now - 2d                  │                        │                      │┃    <item>                                  ┃
│  union            u││╰─────────────────────────────────────────╯                        │                      │┃      <title>Introducing Rust 1.78</title>  ┃
│  unique           q││                     ▼                                             │                      │┃      <link>https://blog.rust-lang.org/2026/┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃      <description><![CDATA[Rust 1.78.0 is n┃
│SOURCES             │││3  Regex                                 │                        │                      │┃      <pubDate>Sun, 5 Jul 2026 10:00:00 +000┃
│  fetch_csv        v│││^\[(?<score>\d+)\]\s(?<title>.*)         │                        │                      │┃    </item>                                 ┃
│  fetch_feed       f││╰─────────────────────────────────────────╯                        │                      │┃    <item>                                  ┃
│  fetch_json       j││                     ▼                                             │                      │┃      <title>Ask HN: What&apos;s a technolog┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃      <link>https://news.ycombinator.com/ite┃
│SINKS               │││4  Filter                                │                        │                      │┃      <description><![CDATA[I'm looking for ┃
│  output           o│││score > 100                              │                        │                      │┃      <pubDate>Sun, 5 Jul 2026 09:00:00 +000┃
│                    ││╰─────────────────────────────────────────╯                        │                      │┃    </item>                                 ┃
│                    ││                     ├─────────────────────────────────────────────┘                      │┃    <item>                                  ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃      <title>The problem with async in Rust<┃
│                    │││6  Union                                 │                                               │┃      <link>https://smallcultfollowing.com/b┃
│                    │││merge streams                            │                                               │┃      <description><![CDATA[Async Rust is po┃
│                    ││╰─────────────────────────────────────────╯                                               │┃      <pubDate>Sun, 5 Jul 2026 07:00:00 +000┃
│                    ││                     ▼                                                                    │┃    </item>                                 ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃  </channel>                                ┃
│                    │││7  Sort                                  │                                               │┃</rss>                                      ┃
│                    │││By: pubDate desc                         │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││8  Output                                │                                               │┃                                            ┃
│                    │││rss → temp://output.xml                  │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                                                                                          │┃                                            ┃
│                    ││                                                                                          │┃ Rendered 3 items · 12:00  Auto refresh: on ┃
└────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 Mode: Normal                                                                                 [ ] tab   a auto-refresh   j/k scroll   r run   tab pane   ? help
