crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__preview_running_shows_spinner_footer.snap
---
source: crates/ripe-tui/src/ui/mod.rs
assertion_line: 555
expression: "render_to_string(&mut app, 160, 40)"
---
 PIPES   EDIT  RUN  VIEW  HELP                                                   news_pipeline.pipe                                                   ● 8 nodes
┌Palette─────────────┐┌Canvas────────────────────────────────────────────────────────────────────────────────────┐┏Preview━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│NODES               ││╔═════════════════════════════════════════╗   ╭─────────────────────────────────────────╮ │┃ FEED    ITEMS (0)    RAW                   ┃
│  filter           t││║1  Fetch Feed                            ║   │5  Fetch Feed                            │ │┃                                            ┃
│  limit            l││║https://hnrss.org/frontpage              ║   │https://www.reddit.com/r/rust/.rss       │ │┃  No preview yet — press r to run the pipe. ┃
│  regex            r││╚═════════════════════════════════════════╝   ╰─────────────────────────────────────────╯ │┃                                            ┃
│  reverse          e││                     ▼                                             │                      │┃                                            ┃
│  sort             s││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│  tail             i│││2  Filter                                │                        │                      │┃                                            ┃
│  transform        m│││item.pubDate > now - 2d                  │                        │                      │┃                                            ┃
│  union            u││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│  unique           q││                     ▼                                             │                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│SOURCES             │││3  Regex                                 │                        │                      │┃                                            ┃
│  fetch_csv        v│││^\[(?<score>\d+)\]\s(?<title>.*)         │                        │                      │┃                                            ┃
│  fetch_feed       f││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│  fetch_json       j││                     ▼                                             │                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                        │                      │┃                                            ┃
│SINKS               │││4  Filter                                │                        │                      │┃                                            ┃
│  output           o│││score > 100                              │                        │                      │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                        │                      │┃                                            ┃
│                    ││                     ├─────────────────────────────────────────────┘                      │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││6  Union                                 │                                               │┃                                            ┃
│                    │││merge streams                            │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││7  Sort                                  │                                               │┃                                            ┃
│                    │││By: pubDate desc                         │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                     ▼                                                                    │┃                                            ┃
│                    ││╭─────────────────────────────────────────╮                                               │┃                                            ┃
│                    │││8  Output                                │                                               │┃                                            ┃
│                    │││rss → temp://output.xml                  │                                               │┃                                            ┃
│                    ││╰─────────────────────────────────────────╯                                               │┃                                            ┃
│                    ││                                                                                          │┃                                            ┃
│                    ││                                                                                          │┃ ⠙ evaluating…             Auto refresh: on ┃
└────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 Mode: Normal                                                                                 [ ] tab   a auto-refresh   j/k scroll   r run   tab pane   ? help
