crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__tall_pipe_scrolled_to_bottom.snap
---
source: crates/ripe-tui/src/ui/mod.rs
assertion_line: 423
expression: "render_to_string(&mut app, 120, 40)"
---
 PIPES   EDIT  RUN  VIEW  HELP                                   tall.pipe                                   ● 11 nodes
┌Palette─────────────┐┏Canvas━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌Preview────────────────────────┐
│NODES               │┃╰───────────────────────────↑ more                             ┃│ FEED    ITEMS (0)    RAW      │
│  filter           t│┃               ▼                                               ┃│                               │
│  limit            l│┃╭────────────────────────────╮                                 ┃│No preview yet — press r to run│
│  regex            r│┃│5  Filter                   │                                 ┃│           the pipe.           │
│  reverse          e│┃│(no rules)                  │                                 ┃│                               │
│  sort             s│┃╰────────────────────────────╯                                 ┃│                               │
│  tail             i│┃               ▼                                               ┃│                               │
│  transform        m│┃╭────────────────────────────╮                                 ┃│                               │
│  union            u│┃│6  Filter                   │                                 ┃│                               │
│  unique           q│┃│(no rules)                  │                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│SOURCES             │┃               ▼                                               ┃│                               │
│  fetch_csv        v│┃╭────────────────────────────╮                                 ┃│                               │
│  fetch_feed       f│┃│7  Filter                   │                                 ┃│                               │
│  fetch_json       j│┃│(no rules)                  │                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│SINKS               │┃               ▼                                               ┃│                               │
│  output           o│┃╭────────────────────────────╮                                 ┃│                               │
│                    │┃│8  Filter                   │                                 ┃│                               │
│                    │┃│(no rules)                  │                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│                    │┃               ▼                                               ┃│                               │
│                    │┃╭────────────────────────────╮                                 ┃│                               │
│                    │┃│9  Filter                   │                                 ┃│                               │
│                    │┃│(no rules)                  │                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│                    │┃               ▼                                               ┃│                               │
│                    │┃╭────────────────────────────╮                                 ┃│                               │
│                    │┃│10  Filter                  │                                 ┃│                               │
│                    │┃│(no rules)                  │                                 ┃│                               │
│                    │┃╰────────────────────────────╯                                 ┃│                               │
│                    │┃               ▼                                               ┃│                               │
│                    │┃╔════════════════════════════╗                                 ┃│                               │
│                    │┃║11  Output                  ║                                 ┃│                               │
│                    │┃║rss → stdout                ║                                 ┃│                               │
│                    │┃╚════════════════════════════╝                                 ┃│ Rendered 0 i…Auto refresh: on │
└────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────┘
 Mode: Normal                              a insert   d del   c connect   r run   j/k move   tab pane   ? help   q quit
