crates/ripe-tui/src/ui/snapshots/ripe__ui__tests__too_small_notice.snap
---
source: crates/ripe-tui/src/ui/mod.rs
expression: "render_to_string(&app, 60, 15)"
---







              terminal too small (need 80x24)
